fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+
+*{
+  border:1px solid black;
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
